# fastapi-boilerplate

./: README.md  pyproject.toml
src/domain/exceptions/: base.py
src/main/: config.py
